--- a/style1.css
+++ b/style1.css
@@ -56,6 +56,9 @@ body {
     border-radius: 10px;
     display: inline-block;
     margin-top: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+
 }
 h1 {
     font-size: 2em;
